prototype gestionnaire menu mis à jour

--- a/tests/test_gestionnairemenu.html
+++ b/tests/test_gestionnairemenu.html
@@ -91,7 +91,7 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
     <script src="./gestionnairemenu_prototype.js"></script>
     <script src="./menu_prototype.js"></script>
     <script src="./item_prototype.js"></script>
