maj prototype gestionnaire menu

--- a/tests/test_gestionnairemenu.html
+++ b/tests/test_gestionnairemenu.html
@@ -24,8 +24,8 @@
 			</form>
 			<button id="clear" type="button" class="btn btn-default navbar-btn">Vider</button>
 			<button id="cancel" type="button" class="btn btn-default navbar-btn">Annuler</button>
-			<button id="enregistrer" type="button" class="btn btn-default navbar-btn btn_insertion_bd">Enregistrer</button>
-			<button id="publier" type="button" class="btn btn-default navbar-btn btn_insertion_bd">Publier</button>
+			<button id="save" type="button" class="btn btn-default navbar-btn btn_insertion_bd">Enregistrer</button>
+			<button id="publish" type="button" class="btn btn-default navbar-btn btn_insertion_bd">Publier</button>
 		</div>
 		<div class="panel-body">
 
