--- a/V3/index.html
+++ b/V3/index.html
@@ -74,7 +74,8 @@
 						<div class="form-group">
 							<label for"lst_parents" class="col-sm-2 control-label">Parent</label>
 							<div class="col-sm-10">
-								<select id="lst_parents" placeholder="select-page" class="form-control"></select>
+								<select id="lst_parents" placeholder="select-page" class="form-control">
+								</select>
 							</div>
 						</div>
 
@@ -83,7 +84,7 @@
 							<div class="col-sm-offset-2 col-sm-10">
 								<div class="checkbox">
 									<label>
-									<input type="checkbox"> Afficher dans le menu
+									<input id="show_item" type="checkbox"> Afficher dans le menu
 									</label>
 								</div>
 							</div>
@@ -91,7 +92,8 @@
 
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
-								<button type="button" class="btn btn-default">Valider</button>
+								<button id="submit_config" type="button" class="btn btn-default">Valider</button>
+								<button id="cancel_config" type="button" class="btn btn-default">Reset</button>
 							</div>
 						</div>
 					</form>
