Interface de configuration fonctionnelle TODO : requêtes AJAX au backend + bouton reset + modification children + modification parent

--- a/V3/index.html
+++ b/V3/index.html
@@ -92,7 +92,7 @@
 
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
-								<button id="submit_config" type="button" class="btn btn-default">Valider</button>
+								<button id="submit_config" type="button" class="btn btn-default">Valider les modifications</button>
 								<button id="cancel_config" type="button" class="btn btn-default">Reset</button>
 							</div>
 						</div>
@@ -100,13 +100,13 @@
 				</div>
 				<div id="infos_page">
 
-					<span id ="spn_parent"><strong>Modifier la page parente</strong></span>
+					<span id ="spn_parent"><strong>Modifier le parent</strong></span>
 					<div class="btn-group">
 						<button id="edit_parent" type="button" class="btn btn-default ">
 							<span class="glyphicon glyphicon-wrench"></span>
 						</button>
 					</div>
-					<div id="parent" class="well well-sm"></div>
+					<div class="well well-sm"><span id="parent_to_edit" ></span></div>
 
 
 
